Protocol Explanation Iphone issue

--- a/src/styles/_section-arth-protocol-explation.sass
+++ b/src/styles/_section-arth-protocol-explation.sass
@@ -309,7 +309,7 @@
     height: 34px
 
   .count:after 
-    content: counter(count)
+    content: '0'
     animation: counter 30s linear infinite 
     position: absolute
     top: 50%
@@ -328,33 +328,33 @@
 
   @keyframes counter 
     0% 
-      counter-increment: count 0		
+      content: '0'	
     1% 
-      counter-increment: count 1		
+      content: '1'			
     5% 
-      counter-increment: count 2		
+      content: '2'			
     10% 
-      counter-increment: count 3		
+      content: '3'			
     15% 
-      counter-increment: count 4		
+      content: '4'		
     20% 
-      counter-increment: count 5		
+      content: '5'		
     25% 
-      counter-increment: count 6		
+      content: '6'		
     30% 
-      counter-increment: count 7		
+      content: '7'		
     35% 
-      counter-increment: count 8		
+      content: '8'		
     40% 
-      counter-increment: count 9		
+      content: '9'		
     45% 
-      counter-increment: count 10	
+      content: '10'	
     48% 
-      counter-increment: count 11	      	
+      content: '11'	      	
     50% 
-      counter-increment: count 12    
+      content: '12'    
     100% 
-      counter-increment: count 12           
+      content: '12'          
 
   .count-reverse:after
     animation: count-reverse 30s linear infinite
@@ -362,33 +362,33 @@
 
   @keyframes count-reverse 
     100% 
-      counter-increment: count 0		
+      content: '0'		
     51% 
-      counter-increment: count 0     		
+      content: '0'	    		
     50%     
-      counter-increment: count 1		
+      content: '1'			
     45% 
-      counter-increment: count 2		
+      content: '2'			
     40% 
-      counter-increment: count 3		
+      content: '3'			
     35% 
-      counter-increment: count 4		
+      content: '4'			
     30% 
-      counter-increment: count 5		
+      content: '5'			
     25% 
-      counter-increment: count 6		
+      content: '6'			
     20% 
-      counter-increment: count 7		
+      content: '7'			
     15% 
-      counter-increment: count 8		
+      content: '8'			
     10% 
-      counter-increment: count 9		
+      content: '9'			
     7% 
-      counter-increment: count 10		
+      content: '10'			
     3% 
-      counter-increment: count 11
+      content: '11'	
     0% 
-      counter-increment: count 12      
+      content: '12'	      
 
   .timer 
     width: 120px
@@ -446,7 +446,7 @@
     position: absolute
     display: block
     z-index: 100
-    left: 0px
+    left: -11px
     top: -8px
     width: 0
     height: 0
@@ -755,7 +755,7 @@
     border-bottom: 4px solid transparent
 
   .line-timer .timer .spinner-rev:before
-    left: -1px
+    left: -3px
     top: -4px
     border-top: 4px solid transparent
     border-left: 4px solid #fff
